Replace starter code with shape

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.js"></script>
-    <script src="hollenberry-octocat.js"></script>
+    <script src="sketch.js"></script>
   </head>
   <body>
   </body>
